// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginModal snapshot tests should match the snapshot at OTP checking for login stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        newPassword
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-loader-container"
    >
      <div
        className="finik-loader"
      />
      <p
        className="login-modal-loader-text"
      >
        checking
      </p>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at OTP checking for sign up stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        signUp
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-loader-container"
    >
      <div
        className="finik-loader"
      />
      <p
        className="login-modal-loader-text"
      >
        checking
      </p>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at OTP for login stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        newPassword
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        OTPEnter
      </p>
      <div
        className="login-modal-input-otp-container"
      >
        <input
          data-testid="OTPInput0"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput1"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput2"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput3"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput4"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput5"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
      </div>
      <p
        className="login-modal-input-help login-modal-opaque-text"
      >
        OTPExplanation
      </p>
      <button
        className="login-modal-input-help login-modal-correct-input"
        data-testid="sendOTPAgainButton"
        onClick={[Function]}
      >
        OTPSendAgain
      </button>
    </div>
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="nextButton"
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at OTP input stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        signUp
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        OTPEnter
      </p>
      <div
        className="login-modal-input-otp-container"
      >
        <input
          data-testid="OTPInput0"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput1"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput2"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput3"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput4"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
        <input
          data-testid="OTPInput5"
          maxLength={1}
          onChange={[Function]}
          onFocus={[Function]}
          pattern="[0-9]"
          type="number"
        />
      </div>
      <p
        className="login-modal-input-help login-modal-opaque-text"
      >
        OTPExplanation
      </p>
      <button
        className="login-modal-input-help login-modal-correct-input"
        data-testid="sendOTPAgainButton"
        onClick={[Function]}
      >
        OTPSendAgain
      </button>
    </div>
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="nextButton"
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at OTP resending for sign up stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        brand map
      </p>
      <p
        className="login-modal-header-description"
      >
        loginCallToAction
      </p>
    </div>
    <div
      className="login-modal-loader-container"
    >
      <div
        className="finik-loader"
      />
      <p
        className="login-modal-loader-text"
      >
        checking
      </p>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at login loading step 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        logIn
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-loader-container"
    >
      <div
        className="finik-loader"
      />
      <p
        className="login-modal-loader-text"
      >
        checking
      </p>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at login stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <nav
      className="login-modal-navigation-container"
    >
      <button
        data-testid="goBackButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-go-back"
          src="test-file-stub"
        />
      </button>
      <button
        data-testid="cancelButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-cancel"
          src="test-file-stub"
        />
      </button>
    </nav>
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        logIn
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        onlyEmail
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="emailInput"
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
      <p
        className="login-modal-input-help"
      >
        enterPassword
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="passwordInput"
          onChange={[Function]}
          type="password"
        />
      </div>
    </div>
    <div
      className="login-modal-button-container"
    >
      <div
        className="login-modal-two-buttons-on-one-row"
      >
        <button
          className="login-modal-correct-input"
          data-testid="resetPasswordButton"
          onClick={[Function]}
        >
          resetPassword
        </button>
        <button
          className="login-modal-button-black-on-green"
          data-testid="nextButton"
          onClick={[Function]}
        >
          next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at mail input stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <nav
      className="login-modal-navigation-container"
    >
      <button
        data-testid="goBackButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-go-back"
          src="test-file-stub"
        />
      </button>
      <button
        data-testid="cancelButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-cancel"
          src="test-file-stub"
        />
      </button>
    </nav>
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        signUp
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        onlyEmail
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="emailInput"
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="nextButton"
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password creation loading stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        brand map
      </p>
      <p
        className="login-modal-header-description"
      >
        loginCallToAction
      </p>
    </div>
    <div
      className="login-modal-loader-container"
    >
      <div
        className="finik-loader"
      />
      <p
        className="login-modal-loader-text"
      >
        checking
      </p>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password creation stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <nav
      className="login-modal-navigation-container"
    >
      <button
        data-testid="goBackButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-go-back"
          src="test-file-stub"
        />
      </button>
      <button
        data-testid="cancelButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-cancel"
          src="test-file-stub"
        />
      </button>
    </nav>
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        signUp
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        enterPassword
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="passwordInput"
          onChange={[Function]}
          type="password"
        />
      </div>
      <p
        className="login-modal-input-help"
      >
        repeatPassword
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="passwordRepeatInput"
          onChange={[Function]}
          type="password"
        />
      </div>
    </div>
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="nextButton"
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password reset request loading stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        brand map
      </p>
      <p
        className="login-modal-header-description"
      >
        loginCallToAction
      </p>
    </div>
    <div
      className="login-modal-loader-container"
    >
      <div
        className="finik-loader"
      />
      <p
        className="login-modal-loader-text"
      >
        checking
      </p>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password reset request stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <nav
      className="login-modal-navigation-container"
    >
      <button
        data-testid="goBackButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-go-back"
          src="test-file-stub"
        />
      </button>
      <button
        data-testid="cancelButton"
        onClick={[Function]}
      >
        <img
          alt="login-modal-navigation-cancel"
          src="test-file-stub"
        />
      </button>
    </nav>
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        newPassword
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        mailForPasswordReset
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="emailInput"
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="sendOTPButton"
        onClick={[Function]}
      >
        OTPSendSMS
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at password reset stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        newPassword
      </p>
      <p
        className="login-modal-header-description login-modal-opaque-text"
      >
        finikMapProductDescription
      </p>
    </div>
    <div
      className="login-modal-input-container"
    >
      <p
        className="login-modal-input-help"
      >
        enterPassword
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="passwordInput"
          onChange={[Function]}
          type="password"
        />
      </div>
      <p
        className="login-modal-input-help"
      >
        repeatPassword
      </p>
      <div
        className="login-modal-input-box-container"
      >
        <input
          className="login-modal-input-text"
          data-testid="passwordRepeatInput"
          onChange={[Function]}
          type="password"
        />
      </div>
    </div>
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="nextButton"
        onClick={[Function]}
      >
        next
      </button>
    </div>
  </div>
</div>
`;

exports[`LoginModal snapshot tests should match the snapshot at user welcome stage 1`] = `
<div
  className="login-modal-window"
>
  <div
    className="login-modal-container"
  >
    <div
      className="login-modal-shadow login-modal-shadow-green"
    />
    <div
      className="login-modal-shadow login-modal-shadow-blue"
    />
    <div
      className="login-modal-header-container"
    >
      <img
        alt="login-modal-header-logo"
        className="login-modal-header-logo"
        src="test-file-stub"
      />
      <p
        className="login-modal-header"
      >
        brand map
      </p>
      <p
        className="login-modal-header-description"
      >
        loginCallToAction
      </p>
    </div>
    <div
      className="login-modal-input-container"
    />
    <div
      className="login-modal-button-container"
    >
      <button
        className="login-modal-button-black-on-green"
        data-testid="loginButton"
        onClick={[Function]}
      >
        accountLogin
      </button>
      <button
        className="login-modal-button-green-on-black"
        data-testid="registerButton"
        onClick={[Function]}
      >
        accountRegister
      </button>
    </div>
  </div>
</div>
`;
